--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,8 @@ cmake_minimum_required(VERSION 3.13)
 project(Scheme_Interpreter)
 
 set(CMAKE_CXX_STANDARD 11)
-add_executable(Scheme_Interpreter main.cpp
-        header/Parser.h src/Parser.cpp
-        header/Scanner.h src/Scanner.cpp
-        header/Evaluator.h src/Evaluator.cpp
-        header/Error.h src/Error.cpp
-        header/uGlobal.h)
+
+include_directories(${PROJECT_SOURCE_DIR}/header/)
+
+add_executable(Scheme_Interpreter src/uGlobal.cpp main.cpp src/Parser.cpp src/Scanner.cpp 
+               src/Evaluator.cpp src/Error.cpp )
